--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <div class="navbar">
+        <img class="navbar__logo" src="images/Logo.png" alt="logo">
+        <ul class="navbar__links">
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="index.html">Collection</a>
+            </li>
+            <li>
+                <a href="index.html">Parfume</a>
+            </li>
+            <li>
+                <a href="index.html">Fine jewelry</a>
+            </li>
+            <li>
+                <a href="index.html">Watchmaking</a>
+            </li>
+            <li>
+                <a href="index.html">About Ada Luxe</a>
+            </li>
+        </ul>
+        <ul class="navbar__buttons">
+            <li><a href="index.html"><img src="icons/lucide_search.png" alt="search"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_user-2.png" alt="login"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_heart.png" alt="liked"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_shopping-bag.png" alt="shopping"></a></li>
+        </ul>
+    </div>
 </body>
 </html>
