--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="navbar">
-        <img class="navbar__logo" src="images/Logo.png" alt="logo">
+        <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
         <ul class="navbar__links">
-            <li>
+            <li class="active">
                 <a href="index.html">Home</a>
             </li>
             <li>
@@ -30,10 +30,10 @@
             </li>
         </ul>
         <ul class="navbar__buttons">
-            <li><a href="index.html"><img src="icons/lucide_search.png" alt="search"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_user-2.png" alt="login"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_heart.png" alt="liked"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_shopping-bag.png" alt="shopping"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_search.svg" alt="search"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_user-2.svg" alt="login"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_heart.svg" alt="liked"></a></li>
+            <li><a href="index.html"><img src="icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
         </ul>
     </div>
 </body>
