add reset css and complete hero section

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADA Luxe</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/c043c7361d.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!--Navigation Bar-->
     <div class="navbar">
         <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
         <ul class="navbar__links">
@@ -36,5 +38,18 @@
             <li><a href="index.html"><img src="icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
         </ul>
     </div>
+
+    <!--Hero Section-->
+    <div class="hero">
+        <div class="hero__content">
+            <h2>Embrace Elegance with<br>Ada Luxe</h2>
+            <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
+            <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="hero__image">
+            <img src="images/Hero Image.png" alt="hero image">
+        </div>
+    </div>
+
 </body>
 </html>
