--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!--Hero Section-->
     <div class="hero">
         <div class="hero__content">
-            <h2>Embrace Elegance with<br>Ada Luxe</h2>
+            <h1>Embrace Elegance with<br>Ada Luxe</h1>
             <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
             <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
         </div>
@@ -50,6 +50,34 @@
             <img src="images/Hero Image.png" alt="hero image">
         </div>
     </div>
+
+    <!--Highlights Section-->
+    <section class="highlights">
+        <div class="highlights__content">
+            <h1>Collection Highlights</h1>
+            <p>Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each piece is a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
+        </div>
+        <ul class="highlights__gallery">
+            <li class="post post1">
+                <img src="images/post1.png" alt="model">
+                <h3>Baroque Sport Elegance</h3>
+                <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque embellishments is paired with a silky white satin skirt. A look that redefines sportswear luxury.</p>
+                <button>Explore the Collection</button>
+            </li>
+            <li class="post post2">
+                <img src="images/post2.png" alt="model">
+                <h3>Golden Reflections</h3>
+                <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden reflections. A piece that epitomizes the bold spirit of modern fashion.p>
+                <button>Explore the Collection</button>
+            </li>
+            <li class="post post3">
+                <img src="images/post3.png" alt="model">
+                <h3>Monochrome Lace Enchantment</h3>
+                <p>A timeless creation of black and white lace, this dress weaves together classic elegance and contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                <button>Explore the Collection</button>
+            </li>
+        </ul>
+    </section>
 
 </body>
 </html>
