Add about section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/c043c7361d.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <!--Navigation Bar-->
     <div class="navbar">
@@ -40,44 +42,83 @@
     </div>
 
     <!--Hero Section-->
-    <div class="hero">
+    <section class="hero">
         <div class="hero__content">
             <h1>Embrace Elegance with<br>Ada Luxe</h1>
-            <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our exclusive collections.</p>
+            <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our
+                exclusive collections.</p>
             <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="hero__image">
             <img src="images/Hero Image.png" alt="hero image">
         </div>
-    </div>
+    </section>
 
     <!--Highlights Section-->
     <section class="highlights">
         <div class="highlights__content">
             <h1>Collection Highlights</h1>
-            <p>Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each piece is a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
+            <p>Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each piece is
+                a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
         </div>
         <ul class="highlights__gallery">
             <li class="post post1">
                 <img src="images/post1.png" alt="model">
                 <h3>Baroque Sport Elegance</h3>
-                <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque embellishments is paired with a silky white satin skirt. A look that redefines sportswear luxury.</p>
+                <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque
+                    embellishments is paired with a silky white satin skirt. A look that redefines sportswear luxury.
+                </p>
                 <button>Explore the Collection</button>
             </li>
             <li class="post post2">
                 <img src="images/post2.png" alt="model">
                 <h3>Golden Reflections</h3>
-                <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden reflections. A piece that epitomizes the bold spirit of modern fashion.p>
-                <button>Explore the Collection</button>
+                <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden reflections. A
+                    piece that epitomizes the bold spirit of modern fashion.p>
+                    <button>Explore the Collection</button>
             </li>
             <li class="post post3">
                 <img src="images/post3.png" alt="model">
                 <h3>Monochrome Lace Enchantment</h3>
-                <p>A timeless creation of black and white lace, this dress weaves together classic elegance and contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
+                    contemporary design. The embodiment of grace for the fashion-forward woman.</p>
                 <button>Explore the Collection</button>
             </li>
         </ul>
     </section>
 
+    <!--About Section-->
+    <section class="about">
+        <div class="caption">
+            <h1>About Ada Luxe</h1>
+            <p>Where Elegance Meets Innovation -</p>
+        </div>
+        <div class="content">
+            <div class="content__text">
+                <div class="content__text__container">
+                    <h3>Ada Luxe is a symbol of modern luxury fashion, fusing timeless elegance with innovative design
+                        to create pieces that transcend trends.</h3>
+                    <p>Founded with a passion for redefining luxury fashion, Ada Luxe was born from a desire to blend
+                        traditional sophistication with contemporary flair. From our very first collection, we've sought
+                        to push the boundaries, crafting apparel that resonates with the modern, fashion-forward woman.
+                    </p>
+                </div>
+                <div class="content__text__container">
+                    <h3>Our Mission -</h3>
+                    <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                        quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                    </p>
+                </div>
+                <div class="content__text__container">
+                    <h3>Our Vision -</h3>
+                    <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                        quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                    </p>
+                </div>
+            </div>
+            <img class="content__image" src="images/about.png" alt="studio">
+        </div>
+    </section>
 </body>
+
 </html>
