add features section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,27 @@
             <img class="content__image" src="images/about.png" alt="studio">
         </div>
     </section>
+
+    <!--Features-->
+    <section class="features">
+        <ul>
+            <li>
+                <img src="icons/lucide_lightbulb.png" alt="bulb">
+                <h3>Innovation</h3>
+                <p>We never settle. Innovation drives us to explore new horizons, creating fashion that's always a step ahead.</p>
+            </li>
+            <li>
+                <img src="icons/lucide_helping-hand.png" alt="helping hand">
+                <h3>Quality</h3>
+                <p>Every stitch, every fabric, is chosen with care. Quality isn't just a word; it's our promise.</p>
+            </li>
+            <li>
+                <img src="icons/lucide_feather.png" alt="feather">
+                <h3>Elegance</h3>
+                <p>Elegance is our essence. In every design, we aim to capture the timeless beauty that makes you shine.</p>
+            </li>
+        </ul>
+    </section>
 </body>
 
 </html>
