--- a/index.html
+++ b/index.html
@@ -120,13 +120,14 @@
         </div>
     </section>
 
-    <!--Features-->
+    <!--Features Section-->
     <section class="features">
         <ul>
             <li>
                 <img src="icons/lucide_lightbulb.png" alt="bulb">
                 <h3>Innovation</h3>
-                <p>We never settle. Innovation drives us to explore new horizons, creating fashion that's always a step ahead.</p>
+                <p>We never settle. Innovation drives us to explore new horizons, creating fashion that's always a step
+                    ahead.</p>
             </li>
             <li>
                 <img src="icons/lucide_helping-hand.png" alt="helping hand">
@@ -136,10 +137,67 @@
             <li>
                 <img src="icons/lucide_feather.png" alt="feather">
                 <h3>Elegance</h3>
-                <p>Elegance is our essence. In every design, we aim to capture the timeless beauty that makes you shine.</p>
+                <p>Elegance is our essence. In every design, we aim to capture the timeless beauty that makes you shine.
+                </p>
             </li>
         </ul>
     </section>
+
+    <!--Portfolio Section-->
+    <section class="portfolio">
+        <div class="caption">
+            <h2>As Seen In</h2>
+            <p>Explore how Ada Luxe is making waves in the world of fashion -</p>
+        </div>
+        <div class="video">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/gJpXlRkW6Fw?si=b7C9YNZBitxME0up&amp;controls=0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
+        <div class="textcolumns">
+            <div class="col">
+                <h3>Ada Luxe: The Dawn of a New Elegance in Fashion</h3>
+                <p>In the ever-evolving world of haute couture, few brands emerge with a truly distinctive voice. </p>
+                <p>Ada Luxe is redefining that landscape with its innovative fusion of classic sophistication and modern
+                    allure.</p>
+                <p>The new line, featuring eye-catching baroque sports attire, reflective vinyl, and intricate black and
+                    white lace, is a testament to both creative flair and meticulous craftsmanship.</p>
+            </div>
+            <div class="col">
+                <img src="images/column.png" alt="vogue">
+            </div>
+            <div class="col">
+                <p>Ada Luxe's visionary designs have caught the eyes of fashionistas and critics alike, setting the
+                    stage for a reimagined elegance that transcends traditional boundaries.</p>
+                <p>From the satin white skirt that dances with every step to the shimmering golden reflections on a
+                    daring black vinyl top, each piece is a conversation starter, an experience, a statement.</p>
+                <p>Join us as we delve into the world of Ada Luxe, meeting the masterminds behind the brand</p>
+            </div>
+            <div class="col">
+                <p>and exploring the collections that are shaking the foundations of contemporary fashion.</p>
+                <p>Learn how a unique blend of audacity and finesse is transforming not just wardrobes but the very way
+                    we perceive luxury and style.</p>
+                <p>Elegance is no longer just a concept; with Ada Luxe, it's a revolution. </p>
+                <p>Get an exclusive look into the future of fashion with Ada Luxe in this month's Vogue.</p>
+            </div>
+        </div>
+
+        <div class="artgallery">
+            <img src="images/gallerymodel1.png" alt="model">
+            <img src="images/gallerymodel2.png" alt="model">
+            <img src="images/gallerymodel3.png" alt="model">
+            <img src="images/gallerymodel4.png" alt="model">
+            <img src="images/gallerymodel5.png" alt="model">
+            <img src="images/gallerymodel6.png" alt="model">
+            <img src="images/gallerymodel7.png" alt="model">
+            <img src="images/gallerymodel8.png" alt="model">
+            <button>See more</button>
+        </div>
+    </section>
+
 </body>
 
 </html>
