Add contact section

--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
         </div>
     </section>
 
+    <!--Contact Section-->
+    <section class="contact">
+        <h2>Stay in Touch with Ada Luxe</h2>
+        <p>Join our exclusive newsletter to receive the latest updates, special offers, and insider access to new collections.</p>
+        <div class="email-form">
+            <input type="email" name="email" id="mail" placeholder="Enter your email address">
+            <input type="submit" value="Subscribe Now">
+        </div>
+        <a href="">Privacy policy</a>
+    </section>
 </body>
 
 </html>
