--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <!--Navigation Bar-->
+    <!--Navigation Section-->
     <div class="navbar">
         <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
         <ul class="navbar__links">
@@ -201,13 +201,65 @@
     <!--Contact Section-->
     <section class="contact">
         <h2>Stay in Touch with Ada Luxe</h2>
-        <p>Join our exclusive newsletter to receive the latest updates, special offers, and insider access to new collections.</p>
+        <p>Join our exclusive newsletter to receive the latest updates, special offers, and insider access to new
+            collections.</p>
         <div class="email-form">
             <input type="email" name="email" id="mail" placeholder="Enter your email address">
             <input type="submit" value="Subscribe Now">
         </div>
         <a href="">Privacy policy</a>
     </section>
+
+    <!--Footer Section-->
+    <footer>
+        <div class="navigations">
+            <div class="links pages">
+                <h3>Pages</h3>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Collection</a></li>
+                    <li><a href="">Parfume</a></li>
+                    <li><a href="">Fine jewelry</a></li>
+                    <li><a href="">Watchmaking</a></li>
+                    <li><a href="">About Ada Luxe</a></li>
+                </ul>
+            </div>
+            <div class="links useful-links">
+                <h3>Useful links</h3>
+                <ul>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Press</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Careers</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Store Locator</a></li>
+                    <li><a href="">Returns Exchanges</a></li>
+                    <li><a href="">Sitemap</a></li>
+                </ul>
+            </div>
+            <div class="links linksSocials">
+                <h3>Socials</h3>
+                <ul>
+                    <li><a href="">Instagram</a></li>
+                    <li><a href="">Facebook</a></li>
+                    <li><a href="">X</a></li>
+                    <li><a href="">TikTok</a></li>
+                </ul>
+            </div>
+            <div class="dropdown">
+               <label for="language">Language</label>
+               <select name="lang" id="lang">
+                <option value="English">English</option>
+                <option value="Turkish">Turkish</option>
+                <option value="Russian">Russian</option>
+               </select>
+            </div>
+        </div>
+        <img class="vertical-logo" src="images/vertical logo.png" alt="logo">
+        <p class="copyright">© 2023 Ada Luxe. All Rights Reserved. Designed by AC Global Group. Terms & Conditions |
+            Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
+    </footer>
 </body>
 
 </html>
