Make responsive navbar

--- a/index.html
+++ b/index.html
@@ -13,33 +13,38 @@
 <body>
     <!--Navigation Section-->
     <div class="navbar">
-        <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
-        <ul class="navbar__links">
-            <li class="active">
-                <a href="index.html">Home</a>
-            </li>
-            <li>
-                <a href="index.html">Collection</a>
-            </li>
-            <li>
-                <a href="index.html">Parfume</a>
-            </li>
-            <li>
-                <a href="index.html">Fine jewelry</a>
-            </li>
-            <li>
-                <a href="index.html">Watchmaking</a>
-            </li>
-            <li>
-                <a href="index.html">About Ada Luxe</a>
-            </li>
-        </ul>
-        <ul class="navbar__buttons">
-            <li><a href="index.html"><img src="icons/lucide_search.svg" alt="search"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_user-2.svg" alt="login"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_heart.svg" alt="liked"></a></li>
-            <li><a href="index.html"><img src="icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
-        </ul>
+        <div class="container">
+            <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
+            <ul class="navbar__links">
+                <li class="active">
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="index.html">Collection</a>
+                </li>
+                <li>
+                    <a href="index.html">Parfume</a>
+                </li>
+                <li>
+                    <a href="index.html">Fine jewelry</a>
+                </li>
+                <li>
+                    <a href="index.html">Watchmaking</a>
+                </li>
+                <li>
+                    <a href="index.html">About Ada Luxe</a>
+                </li>
+            </ul>
+            <ul class="navbar__buttons">
+                <li><a href="index.html"><img src="icons/lucide_search.svg" alt="search"></a></li>
+                <li><a href="index.html"><img src="icons/lucide_user-2.svg" alt="login"></a></li>
+                <li><a href="index.html"><img src="icons/lucide_heart.svg" alt="liked"></a></li>
+                <li><a href="index.html"><img src="icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
+            </ul>
+            <div class="hamburger-icon">
+                <a href=""><i class="fa-solid fa-bars"></i></a>
+            </div>
+        </div>
     </div>
 
     <!--Hero Section-->
@@ -151,9 +156,9 @@
             <p>Explore how Ada Luxe is making waves in the world of fashion -</p>
         </div>
         <div class="video">
-           <video class="video-js" controls preload="auto" data-setup='{}' poster="images/videocover.png">
-            <source src="images/Video Fashion Ads. _ Passa Silkwear.mp4" type="video/mp4" />
-           </video>
+            <video class="video-js" controls preload="auto" data-setup='{}' poster="images/videocover.png">
+                <source src="images/Video Fashion Ads. _ Passa Silkwear.mp4" type="video/mp4" />
+            </video>
         </div>
 
         <div class="textcolumns">
@@ -247,12 +252,12 @@
                 </ul>
             </div>
             <div class="dropdown">
-               <label for="language">Language</label>
-               <select name="lang" id="lang">
-                <option value="English">English</option>
-                <option value="Turkish">Turkish</option>
-                <option value="Russian">Russian</option>
-               </select>
+                <label for="language">Language</label>
+                <select name="lang" id="lang">
+                    <option value="English">English</option>
+                    <option value="Turkish">Turkish</option>
+                    <option value="Russian">Russian</option>
+                </select>
             </div>
         </div>
         <img class="vertical-logo" src="images/vertical logo.png" alt="logo">
