Make hero section responsive

--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
 
     <!--Hero Section-->
     <section class="hero">
-        <div class="hero__content">
-            <h1>Embrace Elegance with<br>Ada Luxe</h1>
-            <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our
-                exclusive collections.</p>
-            <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
-        </div>
-        <div class="hero__image">
-            <img src="images/Hero Image.png" alt="hero image">
+        <div class="container">
+            <div class="container__content">
+                <h1>Embrace Elegance with Ada Luxe</h1>
+                <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our
+                    exclusive collections.</p>
+                <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            <div class="container__image">
+                <img src="images/Hero Image.png" alt="hero image">
+            </div>
         </div>
     </section>
 
