Make highlights section responsive

--- a/index.html
+++ b/index.html
@@ -64,35 +64,40 @@
 
     <!--Highlights Section-->
     <section class="highlights">
-        <div class="highlights__content">
-            <h1>Collection Highlights</h1>
-            <p>Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each piece is
-                a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
-        </div>
-        <ul class="highlights__gallery">
-            <li class="post post1">
-                <img src="images/post1.png" alt="model">
-                <h3>Baroque Sport Elegance</h3>
-                <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque
-                    embellishments is paired with a silky white satin skirt. A look that redefines sportswear luxury.
-                </p>
-                <button>Explore the Collection</button>
-            </li>
-            <li class="post post2">
-                <img src="images/post2.png" alt="model">
-                <h3>Golden Reflections</h3>
-                <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden reflections. A
-                    piece that epitomizes the bold spirit of modern fashion.p>
+        <div class="container">
+            <div class="container__content">
+                <h1>Collection Highlights</h1>
+                <p>Explore the fusion of modern elegance and innovative design in our 'Collection Highlights.' Each
+                    piece is
+                    a statement, reflecting the unique aesthetic of 'Ada Luxe.' Dive into the collection below.</p>
+            </div>
+            <ul class="container__gallery">
+                <li class="post post1">
+                    <img src="images/post1.png" alt="model">
+                    <h3>Baroque Sport Elegance</h3>
+                    <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque
+                        embellishments is paired with a silky white satin skirt. A look that redefines sportswear
+                        luxury.
+                    </p>
                     <button>Explore the Collection</button>
-            </li>
-            <li class="post post3">
-                <img src="images/post3.png" alt="model">
-                <h3>Monochrome Lace Enchantment</h3>
-                <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
-                    contemporary design. The embodiment of grace for the fashion-forward woman.</p>
-                <button>Explore the Collection</button>
-            </li>
-        </ul>
+                </li>
+                <li class="post post2">
+                    <img src="images/post2.png" alt="model">
+                    <h3>Golden Reflections</h3>
+                    <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden
+                        reflections. A
+                        piece that epitomizes the bold spirit of modern fashion.p>
+                        <button>Explore the Collection</button>
+                </li>
+                <li class="post post3">
+                    <img src="images/post3.png" alt="model">
+                    <h3>Monochrome Lace Enchantment</h3>
+                    <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
+                        contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                    <button>Explore the Collection</button>
+                </li>
+            </ul>
+        </div>
     </section>
 
     <!--About Section-->
