--- a/index.html
+++ b/index.html
@@ -102,34 +102,40 @@
 
     <!--About Section-->
     <section class="about">
-        <div class="caption">
-            <h1>About Ada Luxe</h1>
-            <p>Where Elegance Meets Innovation -</p>
-        </div>
-        <div class="content">
-            <div class="content__text">
-                <div class="content__text__container">
-                    <h3>Ada Luxe is a symbol of modern luxury fashion, fusing timeless elegance with innovative design
-                        to create pieces that transcend trends.</h3>
-                    <p>Founded with a passion for redefining luxury fashion, Ada Luxe was born from a desire to blend
-                        traditional sophistication with contemporary flair. From our very first collection, we've sought
-                        to push the boundaries, crafting apparel that resonates with the modern, fashion-forward woman.
-                    </p>
-                </div>
-                <div class="content__text__container">
-                    <h3>Our Mission -</h3>
-                    <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
-                        quality, and elegance. We strive to inspire confidence and individuality in every wear.
-                    </p>
-                </div>
-                <div class="content__text__container">
-                    <h3>Our Vision -</h3>
-                    <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
-                        quality, and elegance. We strive to inspire confidence and individuality in every wear.
-                    </p>
-                </div>
+        <div class="container">
+            <div class="caption">
+                <h1>About Ada Luxe</h1>
+                <p>Where Elegance Meets Innovation -</p>
             </div>
-            <img class="content__image" src="images/about.png" alt="studio">
+            <div class="content">
+                <div class="content__text">
+                    <div class="content__text__container">
+                        <h3>Ada Luxe is a symbol of modern luxury fashion, fusing timeless elegance with innovative
+                            design
+                            to create pieces that transcend trends.</h3>
+                        <p>Founded with a passion for redefining luxury fashion, Ada Luxe was born from a desire to
+                            blend
+                            traditional sophistication with contemporary flair. From our very first collection, we've
+                            sought
+                            to push the boundaries, crafting apparel that resonates with the modern, fashion-forward
+                            woman.
+                        </p>
+                    </div>
+                    <div class="content__text__container">
+                        <h3>Our Mission -</h3>
+                        <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                            quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                        </p>
+                    </div>
+                    <div class="content__text__container">
+                        <h3>Our Vision -</h3>
+                        <p>To redefine luxury fashion by offering exclusive, handcrafted pieces that embody creativity,
+                            quality, and elegance. We strive to inspire confidence and individuality in every wear.
+                        </p>
+                    </div>
+                </div>
+                <img class="content__image" src="images/about.png" alt="studio">
+            </div>
         </div>
     </section>
 
