Make portfolio section responsive

--- a/index.html
+++ b/index.html
@@ -164,54 +164,60 @@
 
     <!--Portfolio Section-->
     <section class="portfolio">
-        <div class="caption">
-            <h2>As Seen In</h2>
-            <p>Explore how Ada Luxe is making waves in the world of fashion -</p>
-        </div>
-        <div class="video">
-            <video class="video-js" controls preload="auto" data-setup='{}' poster="images/videocover.png">
-                <source src="images/Video Fashion Ads. _ Passa Silkwear.mp4" type="video/mp4" />
-            </video>
-        </div>
+        <div class="container">
+            <div class="caption">
+                <h2>As Seen In</h2>
+                <p>Explore how Ada Luxe is making waves in the world of fashion -</p>
+            </div>
+            <div class="video">
+                <video class="video-js" controls preload="auto" data-setup='{ "fluid" : true }' poster="images/videocover.png">
+                    <source src="images/Video Fashion Ads. _ Passa Silkwear.mp4" type="video/mp4" />
+                </video>
+            </div>
 
-        <div class="textcolumns">
-            <div class="col">
-                <h3>Ada Luxe: The Dawn of a New Elegance in Fashion</h3>
-                <p>In the ever-evolving world of haute couture, few brands emerge with a truly distinctive voice. </p>
-                <p>Ada Luxe is redefining that landscape with its innovative fusion of classic sophistication and modern
-                    allure.</p>
-                <p>The new line, featuring eye-catching baroque sports attire, reflective vinyl, and intricate black and
-                    white lace, is a testament to both creative flair and meticulous craftsmanship.</p>
+            <div class="textcolumns">
+                <div class="col">
+                    <h3>Ada Luxe: The Dawn of a New Elegance in Fashion</h3>
+                    <p>In the ever-evolving world of haute couture, few brands emerge with a truly distinctive voice.
+                    </p>
+                    <p>Ada Luxe is redefining that landscape with its innovative fusion of classic sophistication and
+                        modern
+                        allure.</p>
+                    <p>The new line, featuring eye-catching baroque sports attire, reflective vinyl, and intricate black
+                        and
+                        white lace, is a testament to both creative flair and meticulous craftsmanship.</p>
+                </div>
+                <div class="col">
+                    <img src="images/column.png" alt="vogue">
+                </div>
+                <div class="col">
+                    <p>Ada Luxe's visionary designs have caught the eyes of fashionistas and critics alike, setting the
+                        stage for a reimagined elegance that transcends traditional boundaries.</p>
+                    <p>From the satin white skirt that dances with every step to the shimmering golden reflections on a
+                        daring black vinyl top, each piece is a conversation starter, an experience, a statement.</p>
+                    <p>Join us as we delve into the world of Ada Luxe, meeting the masterminds behind the brand</p>
+                </div>
+                <div class="col">
+                    <p>and exploring the collections that are shaking the foundations of contemporary fashion.</p>
+                    <p>Learn how a unique blend of audacity and finesse is transforming not just wardrobes but the very
+                        way
+                        we perceive luxury and style.</p>
+                    <p>Elegance is no longer just a concept; with Ada Luxe, it's a revolution. </p>
+                    <p>Get an exclusive look into the future of fashion with Ada Luxe in this month's Vogue.</p>
+                </div>
             </div>
-            <div class="col">
-                <img src="images/column.png" alt="vogue">
-            </div>
-            <div class="col">
-                <p>Ada Luxe's visionary designs have caught the eyes of fashionistas and critics alike, setting the
-                    stage for a reimagined elegance that transcends traditional boundaries.</p>
-                <p>From the satin white skirt that dances with every step to the shimmering golden reflections on a
-                    daring black vinyl top, each piece is a conversation starter, an experience, a statement.</p>
-                <p>Join us as we delve into the world of Ada Luxe, meeting the masterminds behind the brand</p>
-            </div>
-            <div class="col">
-                <p>and exploring the collections that are shaking the foundations of contemporary fashion.</p>
-                <p>Learn how a unique blend of audacity and finesse is transforming not just wardrobes but the very way
-                    we perceive luxury and style.</p>
-                <p>Elegance is no longer just a concept; with Ada Luxe, it's a revolution. </p>
-                <p>Get an exclusive look into the future of fashion with Ada Luxe in this month's Vogue.</p>
-            </div>
-        </div>
 
-        <div class="artgallery">
-            <img src="images/gallerymodel1.png" alt="model">
-            <img src="images/gallerymodel2.png" alt="model">
-            <img src="images/gallerymodel3.png" alt="model">
-            <img src="images/gallerymodel4.png" alt="model">
-            <img src="images/gallerymodel5.png" alt="model">
-            <img src="images/gallerymodel6.png" alt="model">
-            <img src="images/gallerymodel7.png" alt="model">
-            <img src="images/gallerymodel8.png" alt="model">
-            <button>See more</button>
+            <div class="artgallery">
+                <img src="images/gallerymodel1.png" alt="model">
+                <img src="images/gallerymodel2.png" alt="model">
+                <img src="images/gallerymodel3.png" alt="model">
+                <img src="images/gallerymodel4.png" alt="model">
+                <img src="images/gallerymodel5.png" alt="model">
+                <img src="images/gallerymodel6.png" alt="model">
+                <img src="images/gallerymodel7.png" alt="model">
+                <img src="images/gallerymodel8.png" alt="model">
+            </div>
+            <button class="seemorebtn">See more</button>
         </div>
     </section>
 
