Make page responsive

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <p>Explore how Ada Luxe is making waves in the world of fashion -</p>
             </div>
             <div class="video">
-                <video class="video-js" controls preload="auto" data-setup='{ "fluid" : true }' poster="images/videocover.png">
+                <video class="myVideo" controls preload="auto" width="100%">
                     <source src="images/Video Fashion Ads. _ Passa Silkwear.mp4" type="video/mp4" />
                 </video>
             </div>
