new pages added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADA Luxe</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="node_modules/video.js/dist/video-js.min.css">
     <script src="https://kit.fontawesome.com/c043c7361d.js" crossorigin="anonymous"></script>
 </head>
 
@@ -20,19 +19,19 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Collection</a>
+                    <a href="pages/collection.html">Collection</a>
                 </li>
                 <li>
-                    <a href="index.html">Parfume</a>
+                    <a href="pages/parfume.html">Parfume</a>
                 </li>
                 <li>
-                    <a href="index.html">Fine jewelry</a>
+                    <a href="pages/jewellery.html">Fine jewelry</a>
                 </li>
                 <li>
-                    <a href="index.html">Watchmaking</a>
+                    <a href="pages/watchmaking.html">Watchmaking</a>
                 </li>
                 <li>
-                    <a href="index.html">About Ada Luxe</a>
+                    <a href="pages/about.html">About Ada Luxe</a>
                 </li>
             </ul>
             <ul class="navbar__buttons">
@@ -284,7 +283,6 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
 
-    <script src="node_modules/video.js/dist/video.min.js"></script>
 </body>
 
 </html>
