add new pages and their styles

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
             <ul class="navbar__links">
                 <li class="active">
-                    <a href="index.html">Home</a>
+                    <a href="/">Home</a>
                 </li>
                 <li>
                     <a href="pages/collection.html">Collection</a>
@@ -81,7 +81,7 @@
                     <button>Explore the Collection</button>
                 </li>
                 <li class="post post2">
-                    <img src="images/post2.png" alt="model">
+                    <img src="images/post2.png" alt="model">    
                     <h3>Golden Reflections</h3>
                     <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden
                         reflections. A
@@ -238,12 +238,12 @@
             <div class="links pages">
                 <h3>Pages</h3>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Collection</a></li>
-                    <li><a href="">Parfume</a></li>
-                    <li><a href="">Fine jewelry</a></li>
-                    <li><a href="">Watchmaking</a></li>
-                    <li><a href="">About Ada Luxe</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="parfume.html">Parfume</a></li>
+                    <li><a href="jewellery.html">Fine jewelry</a></li>
+                    <li><a href="watchmaking.html">Watchmaking</a></li>
+                    <li><a href="about.html">About Ada Luxe</a></li>
                 </ul>
             </div>
             <div class="links useful-links">
