--- a/pages/collection.html
+++ b/pages/collection.html
@@ -8,57 +8,113 @@
     <title>Ada Luxe | Collection</title>
 </head>
 <body>
+    <!--Navigation Bar-->
     <div class="navbar">
         <div class="container">
-            <a href="index.html"><img class="navbar__logo" src="images/Logo.svg" alt="logo"></a>
+            <a href="../index.html"><img class="navbar__logo" src="../images/Logo.svg" alt="logo"></a>
             <ul class="navbar__links">
                 <li class="active">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                 </li>
                 <li>
-                    <a href="index.html">Collection</a>
+                    <a href="collection.html">Collection</a>
                 </li>
                 <li>
-                    <a href="index.html">Parfume</a>
+                    <a href="parfume.html">Parfume</a>
                 </li>
                 <li>
-                    <a href="index.html">Fine jewelry</a>
+                    <a href="jewellery.html">Fine jewelry</a>
                 </li>
                 <li>
-                    <a href="index.html">Watchmaking</a>
+                    <a href="watchmaking.html">Watchmaking</a>
                 </li>
                 <li>
-                    <a href="index.html">About Ada Luxe</a>
+                    <a href="about.html">About Ada Luxe</a>
                 </li>
             </ul>
             <ul class="navbar__buttons">
-                <li><a href="index.html"><img src="icons/lucide_search.svg" alt="search"></a></li>
-                <li><a href="index.html"><img src="icons/lucide_user-2.svg" alt="login"></a></li>
-                <li><a href="index.html"><img src="icons/lucide_heart.svg" alt="liked"></a></li>
-                <li><a href="index.html"><img src="icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
+                <li><a href="index.html"><img src="../icons/lucide_search.svg" alt="search"></a></li>
+                <li><a href="index.html"><img src="../icons/lucide_user-2.svg" alt="login"></a></li>
+                <li><a href="index.html"><img src="../icons/lucide_heart.svg" alt="liked"></a></li>
+                <li><a href="index.html"><img src="../icons/lucide_shopping-bag.svg" alt="shopping"></a></li>
             </ul>
             <div class="hamburger-icon">
                 <a href=""><i class="fa-solid fa-bars"></i></a>
             </div>
         </div>
     </div>
+    <!--Navigation Bar End-->
 
+    <main class="collection_highlights">
+        <div class="container">
+            <div class="container__content">
+                <h1>Collections</h1>
+            </div>
+            <ul class="container__gallery">
+                <li class="post post1">
+                    <img src="../images/post1.png" alt="model">
+                    <h3>Baroque Sport Elegance</h3>
+                    <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque
+                        embellishments is paired with a silky white satin skirt. A look that redefines sportswear
+                        luxury.
+                    </p>
+                    <button>Explore the Collection</button>
+                </li>
+                <li class="post post2">
+                    <img src="../images/post2.png" alt="model">
+                    <h3>Golden Reflections</h3>
+                    <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden
+                        reflections. A
+                        piece that epitomizes the bold spirit of modern fashion.p>
+                        <button>Explore the Collection</button>
+                </li>
+                <li class="post post3">
+                    <img src="../images/post3.png" alt="model">
+                    <h3>Monochrome Lace Enchantment</h3>
+                    <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
+                        contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                    <button>Explore the Collection</button>
+                </li>
+                <li class="post post1">
+                    <img src="../images/post1.png" alt="model">
+                    <h3>Baroque Sport Elegance</h3>
+                    <p>An extraordinary blend of athletic comfort and opulent style, this sport top adorned with baroque
+                        embellishments is paired with a silky white satin skirt. A look that redefines sportswear
+                        luxury.
+                    </p>
+                    <button>Explore the Collection</button>
+                </li>
+                <li class="post post2">
+                    <img src="../images/post2.png" alt="model">
+                    <h3>Golden Reflections</h3>
+                    <p>Embrace the edgy sophistication with this glossy black vinyl top, infused with golden
+                        reflections. A
+                        piece that epitomizes the bold spirit of modern fashion.p>
+                        <button>Explore the Collection</button>
+                </li>
+                <li class="post post3">
+                    <img src="../images/post3.png" alt="model">
+                    <h3>Monochrome Lace Enchantment</h3>
+                    <p>A timeless creation of black and white lace, this dress weaves together classic elegance and
+                        contemporary design. The embodiment of grace for the fashion-forward woman.</p>
+                    <button>Explore the Collection</button>
+                </li>
+            </ul>
+        </div>
+</main>
 
-
-
-
-
+    <!--Footer-->
     <footer>
         <div class="navigations">
             <div class="links pages">
                 <h3>Pages</h3>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Collection</a></li>
-                    <li><a href="">Parfume</a></li>
-                    <li><a href="">Fine jewelry</a></li>
-                    <li><a href="">Watchmaking</a></li>
-                    <li><a href="">About Ada Luxe</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="collection.html">Collection</a></li>
+                    <li><a href="parfume.html">Parfume</a></li>
+                    <li><a href="jewellery.html">Fine jewelry</a></li>
+                    <li><a href="watchmaking.html">Watchmaking</a></li>
+                    <li><a href="about.html">About Ada Luxe</a></li>
                 </ul>
             </div>
             <div class="links useful-links">
@@ -93,10 +149,10 @@
                 </select>
             </div>
         </div>
-        <img class="vertical-logo" src="images/vertical logo.png" alt="logo">
+        <img class="vertical-logo" src="../images/vertical logo.png" alt="logo">
         <p class="copyright">© 2023 Ada Luxe. All Rights Reserved. Designed by AC Global Group. Terms & Conditions |
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
-
+    <!--Footer End-->
 </body>
 </html>
