Add main.js file

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1>Embrace Elegance with Ada Luxe</h1>
                 <p>Discover a world of sophistication and modern femininity, where style meets sustainability in our
                     exclusive collections.</p>
-                <button>Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
+                <button onclick="redirectToCollection()">Explore the Collection <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div class="container__image">
                 <img src="images/Hero Image.png" alt="hero image">
@@ -283,6 +283,8 @@
             Privacy Policy.<br>(Coded by Tahaberk SOYSAL)</p>
     </footer>
 
+
+    <script src="main.js"></script>
 </body>
 
 </html>
